- Refactored SystemCommand to KameHouseShellScript and added a KameHouseCommand interface - Extracted SystemCommand.Output to a separate class KameHouseCommandResult - Removed unnecessary layer of KameHouseSystemCommands - Renamed SystemCommand references in the ui to KameHouseCommand - Added option to skip building static code